--- a/memory card game/index.html
+++ b/memory card game/index.html
@@ -7,18 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Peralta|Permanent+Marker&display=swap"
-        rel="stylesheet">
 </head>
 
 <body>
     <div class="wrapper">
         <div class="header">
-            <h1 style ="margin-top: 20px;">CARD 
-                <span style="text-align: center;">GAME</span>
+            <div style="text-align: center;">
+            <h1 style="margin-top: 20px;">
+                <span style="margin-left: 20px; font-size: 50px; color: wheat;">MIX-OR-MATCH</span>
             </h1>
-            <span style=" font-size: 30px; font-weight: 00;">
-                <span id="count">0 </span>MOVE(s)</span>
+        </div>
+            <div style="text-align: center; font-size:30px; color: wheat; ">
+                <span id="count">0 </span> MOVE(s)</span>
+                Time: <span id="time-remainig">100</span>
+            </div>
         </div>
         <br>
         <div class="memory-card">
